# skh-flamelang-StrategicKhaos-prefix-

./: .gitattributes  .gitignore  100845540.fxsnapshot  192.168.20.241 IP Address Geolocation Lookup Demo _ IP2Location.html  7LIMIT_TUNING.md  AETHERLINGUA.md  AETHERVIZ.md  ARCHITECTURE.md  BUILD.md  CPU reverse engineer Into FlameLang OS  Cargo.toml  Converting data visualization to FlameLang in codespace - Claude.htm  Converting data visualization to FlameLang in codespace.cargo- Claude.htm  Converting data visualization to FlameLang in codespace.flamevault - Claude.htm  Converting data visualization to FlameLang in codespace.lib - Claude.htm  Converting data visualization to FlameLang in codespace.lib1128 - Claude.htm  Converting data visualization to FlameLang in codespace.readme - Claude.htm  Converting data visualization to FlameLang in codespace1033 - Claude.htm  Converting data visualization to FlameLang in codespace1034 - Claude.htm  Converting data visualization to FlameLang in codespacemerge - Claude.htm  Credits - jarvis-ai-cloud.csv  Custom property · Strategickhaos DAO LLC _ Valoryield Engine.html  DEFENSIVE_PUBLICATION.md  DEPLOY_KEY_SETUP.md  DEVELOPMENT.md  Device Activation.htm  Disk Activity Corrilation  Disk-recon  Dockerfile  FLAMEVAULT.md  FLAMEVAULT_IMPLEMENTATION.md  FLAMEVIZ.md  FlameVault.psm1  GIT_AUTHENTICATION_FIX.md  GIT_PUSH_GUIDE.md  GIT_SETUP.md  GitHub - BLAKE3-team_BLAKE3_ the official Rust and C implementations of the BLAKE3 cryptographic hash function.html  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INVENTION_INVENTORY.md  (+54 more)
.devcontainer/: devcontainer.json
.github/: SETUP_QUICK_REFERENCE.md
.github/workflows/: ci.yml  flamelang-ci.yml  main.yml  overnight.yml  qodana.yml
PowerShell/: README.md
PowerShell/FlameVault/: Examples.ps1  FlameVault.psd1  FlameVault.psm1  README.md
assets/: README.md  convert-logo.py  logo-export.html
compiler/flamelang-ast/: Cargo.toml
compiler/flamelang-ast/src/: ast.rs
compiler/flamelang-cli/: Cargo.toml
compiler/flamelang-cli/src/: main.rs
compiler/flamelang-codegen/: Cargo.toml
compiler/flamelang-codegen/src/: lib.rs
compiler/flamelang-lexer/: Cargo.toml
compiler/flamelang-lexer/src/: lexer.rs  lib.rs  token.rs
compiler/flamelang-parser/: Cargo.toml
compiler/flamelang-parser/src/: lib.rs
compiler/flamelang-semantic/: Cargo.toml
compiler/flamelang-semantic/src/: lib.rs
compiler/flamelang-transform/: Cargo.toml
compiler/flamelang-transform/src/: pipeline.rs
crates/flamelang-ast/: Cargo.toml
crates/flamelang-ast/src/: lib.rs
crates/flamelang-cli/: Cargo.toml
crates/flamelang-cli/src/: main.rs
crates/flamelang-codegen/: Cargo.toml
crates/flamelang-codegen/src/: lib.rs
crates/flamelang-hir/: Cargo.toml
crates/flamelang-hir/src/: lib.rs
crates/flamelang-lexer/: Cargo.toml
crates/flamelang-lexer/src/: lib.rs
crates/flamelang-mir/: Cargo.toml
crates/flamelang-mir/src/: lib.rs
crates/flamelang-parser/: Cargo.toml
crates/flamelang-parser/src/: lib.rs
docs/: ARCHITECTURE.md  GEMINI_API.md  GETTING_STARTED.md  PHASE2_11LIMIT_AGENTGENOME.md  SWARMSENTINEL.md
docs/security/: AETHERFORGE_SECURITY.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_GUIDE.md  README.md  SUMMARY.md
docs/spec/: SECURITY_DOCTRINE.md
examples/: README.md  aetherviz_ultra.py  cortex_usage.flame  dna_encoding.flame  employer_chart.rs  fibonacci.flame  flamevault_demo.rs  gemini_api_example.rs  generate_cortex_outputs.rs  hello.flame  pipefit_glyph_demo.rs  quantum.flame  quantum_entanglement.flame  requirements.txt  test_parser.rs  wave_functions.flame  zybooks_employers.rs
examples/dna_encoding/: README.md
examples/physics_validation/: README.md
examples/quantum_circuits/: README.md
examples/security/: basic_usage.py  prevention_demo.py
flamelang-training/: INTEGRATION.md  QUICK_START.md  README.md  docker-compose.yml
mcp/: IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  quickstart.sh  requirements.txt
mcp/ollama/: flamelang_ollama_client.py
mcp/server/: config.json  mcp_server.py
mcp/tools/: __init__.py  flamelang_mcp_tools.py
mcp/video/: video_generator.py
runtime/flamelang-runtime/: Cargo.toml
section_1_5_bar_charts/: QUICKSTART.md  README.md  requirements.txt  test_notebooks.py  try_1_5_1_bar_charts.ipynb  try_1_5_2_grouped_bar_charts.ipynb  try_1_5_3_stacked_bar_charts.ipynb
security/: __init__.py  aetherforge.py
security/prevention/: __init__.py  argon2id_encryption.py  canary_tokens.py  ephemeral_keys.py  hardware_keys.py  honeypot_keys.py  key_revocation.py  shamir_sharing.py
src/: lib.rs  main.rs  merge.rs  prove.rs
src/agentgenome/: README.md  agentgenome.mojo
src/ai/: mod.rs
src/codegen/: README.md  mod.rs
src/crypto/: README.md  dna_encoding.rs  flamevault.rs  mod.rs  quantum.rs
src/flamevault/: encryption.rs  honeypot.rs  lib.rs  mod.rs  storage.rs  vessel_integration.rs
src/lexer/: Dockerfile  README.md  mod.rs  scanner.rs  tokens.rs
src/parser/: Dockerfile  README.md  ast.rs  grammar.rs  mod.rs
src/prove/: mod.rs
src/stdlib/: mod.rs  pipefitter.rs
src/stdlib/dna/: mod.rs  (+1 more)
src/transform/: mod.rs
src/vault/: alerts.rs  encryption.rs  honeypot.rs  mod.rs  vessel.rs
src/viz/: aether_lingua.rs  aetherlingua.rs  aetherviz.rs  audio.rs  chart.rs  dna_encode.rs  gematria.rs  hash.rs  mod.rs  parser.rs  svg_render.rs  types.rs  unicode_labels.rs
stdlib/flamelang-stdlib/: Cargo.toml
styles/components/: Button.module.css
tools/aetherviz/: README.md  aetherviz_11limit.py
tools/flamec/: Cargo.toml  README.md  main.rs
tools/flamec/src/: main.rs
tools/flamefmt/: Cargo.toml  README.md  main.rs
tools/flamelsp/: .env.example  Cargo.toml  README.md  main.rs
tools/flamelsp/src/: main.rs
tools/flamevault/: Cargo.toml
tools/flamevault/src/: main.rs
tools/vessel/: Cargo.toml  README.md
tools/vessel/src/: analyze.rs  capture.rs  davinci.rs  dissect.rs  main.rs  merge.rs  prove.rs  purify.rs  sovereign.rs  synthesize.rs  types.rs
tools/vesselmirror/: Cargo.toml  README.md
tools/vesselmirror/src/: main.rs
(+57 files in other folders)
