[package]
name = "flamelang"
version = "2.0.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC <security@strategickhaos.ai>"]
description = "FlameLang: 5-layer biological-quantum-physics programming language"
license = "MIT"
repository = "https://github.com/Strategickhaos-Swarm-Intelligence/skh-flamelang"

[workspace]
members = [
    "tools/flamec",
    "tools/flamefmt", 
    "tools/flamelsp",
    "tools/flamevault",
]

[dependencies]
thiserror = "1.0"
unicode-segmentation = "1.10"
logos = "0.13"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
hostname = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "flamec"
path = "src/main.rs"
