[package]
name = "flamelang"
version = "2.0.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC <security@strategickhaos.ai>"]
description = "FlameLang: 5-layer biological-quantum-physics programming language"
license = "MIT"
repository = "https://github.com/Strategickhaos-Swarm-Intelligence/skh-flamelang"

[dependencies]
thiserror = "1.0"
unicode-segmentation = "1.10"
logos = "0.13"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "flamec"
path = "src/main.rs"
