[package]
name = "flamelang"
version = "2.0.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC <security@strategickhaos.ai>"]
description = "FlameLang: 5-layer biological-quantum-physics programming language"
license = "MIT"
repository = "https://github.com/Strategickhaos-Swarm-Intelligence/skh-flamelang"

[dependencies]
thiserror = "1.0"
unicode-segmentation = "1.10"
logos = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "flamec"
path = "src/main.rs"

[[example]]
name = "generate_cortex_outputs"
path = "examples/generate_cortex_outputs.rs"

[[example]]
name = "pipefit_glyph_demo"
path = "examples/pipefit_glyph_demo.rs"
