[package]
name = "flamelang-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
flamelang-lexer = { path = "../flamelang-lexer" }
flamelang-ast = { path = "../flamelang-ast" }
flamelang-transform = { path = "../flamelang-transform" }
