[package]
name = "flamelang-lexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logos = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
