[package]
name = "flamelang-transform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flamelang-ast = { path = "../flamelang-ast" }
flamelang-lexer = { path = "../flamelang-lexer" }
