[package]
name = "flamelang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "flamecc"
path = "src/main.rs"

[dependencies]
flamelang-lexer.workspace = true
flamelang-parser.workspace = true
flamelang-ast.workspace = true
flamelang-hir.workspace = true
flamelang-mir.workspace = true
flamelang-codegen.workspace = true
clap.workspace = true
anyhow.workspace = true
inkwell.workspace = true
