[package]
name = "flamelang-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
flamelang-lexer.workspace = true
flamelang-ast.workspace = true
lalrpop-util.workspace = true
thiserror.workspace = true

[build-dependencies]
lalrpop.workspace = true
