[package]
name = "flamec"
version = "2.0.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC <security@strategickhaos.ai>"]
description = "FlameLang compiler - transforms biological-quantum code to LLVM"
license = "MIT"

[dependencies]
flamelang = { path = "../.." }
clap = { version = "4.4", features = ["derive"] }
