[package]
name = "flamelsp"
version = "2.0.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC <security@strategickhaos.ai>"]
description = "FlameLang Language Server Protocol implementation"
license = "MIT"

[dependencies]
flamelang = { path = "../.." }
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
