[package]
name = "flamevault"
version = "2.0.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC <security@strategickhaos.ai>"]
description = "FlameVault CLI - Honeypot + Encrypted Secrets Engine"

[[bin]]
name = "flamevault"
path = "src/main.rs"

[dependencies]
flamelang = { path = "../.." }
clap = { version = "4.5", features = ["derive"] }
