[package]
name = "vessel"
version = "0.1.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC <security@strategickhaos.ai>"]
description = "VesselMirror - Sovereign Page Cloning & Synthesis Engine"
license = "MIT"

[[bin]]
name = "vessel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
